src/objects/Tags__c.object
<CustomObject>
    <description>Brand, Brand Quality, and Territory hierarchy data table.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Dictates whether the Tag is active and should be a value that can be selected</description>
        <inlineHelpText>Is the Tag Active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrandFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Family</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>BrandFamily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignBrand__c</fullName>
        <label>Campaign Brand</label>
        <picklist>
            <picklistValues>
                <fullName>100 Anos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Anos RTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta Pure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta Rye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ardmore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchentoshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banff Ice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basil Hayden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowmore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calico Jack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooleys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courvoisier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruzan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeKuyper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Tesoro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glengarioch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glen Garioch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hacienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hibiki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hornitos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Whiskeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Devils Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Flavors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IOCodeSegment__c</fullName>
        <label>IO Code Segment</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>URL to the logo which is stored on the Documents folder called Program Calendar Images - Public Shared</description>
        <inlineHelpText>URL to the logo which is stored on the Documents folder called Program Calendar Images - Public Shared</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PL4_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PL4 Brand</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Tags (sales360 Brand)</relationshipLabel>
        <relationshipName>BIBrands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SimilarValues__c</fullName>
        <label>Similar Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IOCodeSegment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BrandFamilies</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.BrandFamily</value>
        </filters>
        <label>Brand Families</label>
    </listViews>
    <listViews>
        <fullName>BrandQualities</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IOCodeSegment__c</columns>
        <columns>PL4_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.BrandQuality</value>
        </filters>
        <label>Brand Qualities</label>
    </listViews>
    <listViews>
        <fullName>BrandVariety</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>External_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.BrandVariety</value>
        </filters>
        <label>Brand Variety</label>
    </listViews>
    <listViews>
        <fullName>Brands</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CampaignBrand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.Brand</value>
        </filters>
        <label>Brands</label>
    </listViews>
    <listViews>
        <fullName>PL4Brands</fullName>
        <columns>NAME</columns>
        <columns>BrandFamily__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.PL4Brand</value>
        </filters>
        <label>PL4 Brands</label>
    </listViews>
    <listViews>
        <fullName>Territories</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>IOCodeSegment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tags__c.Territory</value>
        </filters>
        <label>Territories</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <recordTypes>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>Brand Record Type.</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>BrandFamily</fullName>
        <active>true</active>
        <description>Brand Family Record Type.</description>
        <label>Brand Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>BrandQuality</fullName>
        <active>true</active>
        <description>Brand Quality Record Type.</description>
        <label>Brand Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>BrandVariety</fullName>
        <active>true</active>
        <description>Brand Variety Record Type.</description>
        <label>Brand Variety</label>
    </recordTypes>
    <recordTypes>
        <fullName>PL4Brand</fullName>
        <active>true</active>
        <label>PL4 Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory</fullName>
        <active>true</active>
        <description>Territory Record Type.</description>
        <label>Territory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>